@@ -31,110 +31,119 @@ SOFTWARE.
 
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 
-  <title>Basic Arabic Diacritic Remover</title>
-  <script>
-    var EXAMPLE_TEXT = 'شُكْرًا جَزِيْلًا \n تُوْجَدْ شَدَّةٌ، وَفَتْحَةٌ عَلَى هَٰذِهِ الوَرَقَةٍ ';
+	<title>Basic Arabic Diacritic Remover</title>
+	<script>
+		var EXAMPLE_TEXT = 'شُكْرًا جَزِيْلًا \n تُوْجَدْ شَدَّةٌ، وَفَتْحَةٌ عَلَى هَٰذِهِ ٱلوَرَقَةٍ ';
 
-    function removeDiacritics(inputString, keepFathatan)
-    {
-      result = "";
+		function removeDiacritics(inputString, keepFathatan)
+		{
+			result = "";
 
-      for (var i = 0; i < inputString.length; i++)
-      {
-        if (inputString[i] === "\u064E")
-        {
-          // ARABIC FATHA
-          // Unicode: U+064E, UTF-8: D9 8E
-        }
-        else if (inputString[i] === "\u0650")
-        {
-          // ARABIC KASRA
-          // Unicode: U+0650, UTF-8: D9 90
-        }
-        else if (inputString[i] === "\u064F")
-        {
-          // ARABIC DAMMA
-          // Unicode: U+064F, UTF-8: D9 8F
-        }
-        else if (inputString[i] === "\u064B" && !keepFathatan)
-        {
-          // ARABIC FATHATAN
-          // Unicode: U+064B, UTF-8: D9 8B
-        }
-        else if (inputString[i] === "\u064D")
-        {
-          // ARABIC KASRATAN
-          // Unicode: U+064D, UTF-8: D9 8D
-        }
-        else if (inputString[i] === "\u064C")
-        {
-          // ARABIC DAMMATAN
-          // Unicode: U+064C, UTF-8: D9 8C
-        }
-        else if (inputString[i] === "\u0651")
-        {
-          // ARABIC SHADDA
-          // Unicode: U+0651, UTF-8: D9 91
-        }
-        else if (inputString[i] === "\u0652")
-        {
-          // ARABIC SUKUN
-          // Unicode: U+0652, UTF-8: D9 92
-        }  
-        else if (inputString[i] === "\u0670")
-        {
-          // ARABIC LETTER SUPERSCRIPT ALEF
-          // Unicode: U+0670, UTF-8: D9 B0
-        }
-        else
-        {
-          result += inputString[i];
-        }
-      }
+			for (var i = 0; i < inputString.length; i++)
+			{
+				if (inputString[i] === "\u064E")
+				{
+					// ARABIC FATHA
+					// Unicode: U+064E
+				}
+				else if (inputString[i] === "\u0650")
+				{
+					// ARABIC KASRA
+					// Unicode: U+0650
+				}
+				else if (inputString[i] === "\u064F")
+				{
+					// ARABIC DAMMA
+					// Unicode: U+064F
+				}
+				else if (inputString[i] === "\u064B" && !keepFathatan)
+				{
+					// ARABIC FATHATAN
+					// Unicode: U+064B
+				}
+				else if (inputString[i] === "\u064D")
+				{
+					// ARABIC KASRATAN
+					// Unicode: U+064D
+				}
+				else if (inputString[i] === "\u064C")
+				{
+					// ARABIC DAMMATAN
+					// Unicode: U+064C
+				}
+				else if (inputString[i] === "\u0651")
+				{
+					// ARABIC SHADDA
+					// Unicode: U+0651
+				}
+				else if (inputString[i] === "\u0652")
+				{
+					// ARABIC SUKUN
+					// Unicode: U+0652
+				}	
+				else if (inputString[i] === "\u0670")
+				{
+					// ARABIC LETTER SUPERSCRIPT ALEF
+					// Unicode: U+0670
+				}
+				else if (inputString[i] === "\u0671")
+				{
+					// ARABIC LETTER ALEF WASLA
+					// Unicode: U+0671
 
-      return result;
-    }
+					// Replace ARABIC LETTER ALEF WASLA
+					// with ARABIC LETTER ALEF.
+					result += "\u0627";
+				}
+				else
+				{
+					result += inputString[i];
+				}
+			}
 
-    function removeDiacriticsEventHandler()
-    {
-      var inputText = document.getElementById('arabicInputTextArea').value;
-      var keepFathatan = document.getElementById('keepFathatanCheckbox').checked;
-      var outputText = removeDiacritics(inputText, keepFathatan);
-      document.getElementById('arabicOutputTextArea').value = outputText;
-    }
+			return result;
+		}
 
-    function placeExampleTextEventHandler()
-    {
-      document.getElementById('arabicInputTextArea').value = EXAMPLE_TEXT;
-    }
+		function removeDiacriticsEventHandler()
+		{
+			var inputText = document.getElementById('arabicInputTextArea').value;
+			var keepFathatan = document.getElementById('keepFathatanCheckbox').checked;
+			var outputText = removeDiacritics(inputText, keepFathatan);
+			document.getElementById('arabicOutputTextArea').value = outputText;
+		}
 
-  </script>
+		function placeExampleTextEventHandler()
+		{
+			document.getElementById('arabicInputTextArea').value = EXAMPLE_TEXT;
+		}
+
+	</script>
 </head>
 <body>
-  <h1>Basic Arabic Diacritic Remover: <span lang="ar"> الحاذف البسيط للتشكيل </span></h1>
-  <div role="form">
-    <label for="arabicInputTextArea"><h2>Input: <span lang="ar">المعطيات</span></h2></label>
-    <p>Paste or type diacritic text in the following text input area: ضع النص بالتشكيل في الصندوق التالي
-    <br>
-      <button onclick="placeExampleTextEventHandler();">Put Example ضِعْ   مَثَلًا</button>
-    </p>
-    <textarea id="arabicInputTextArea" rows="4" cols="100" lang="ar" aria-live="assertive"></textarea>
-  
-    <h3>Options اختيارات</h3>
-    <input type="checkbox" id="keepFathatanCheckbox">
-    <label for="keepFathatanCheckbox"> Do not delete fatḥatān (suffix -an)   diacritic. لا تحذف الفتحتين</label><br>
-  
-    <h2>Actions أوامر</h2>
-    <button onclick="removeDiacriticsEventHandler();">Remove Diacritics احذف   التشكيل</button>
-  
-  
-    <label for="arabicOutputTextArea"><h2>Results النتيجة</h2></label>
-    <textarea id="arabicOutputTextArea" rows="4" cols="100" lang="ar" aria-live="assertive"></textarea>
-  </div>
-  <footer><a href="https://github.com/elsanussi-s-mneina/">Elsanussi Mneina made this page. صنع هذه الصفحة السنوسي امنينة </a>
-    <p><a href="https://github.com/elsanussi-s-mneina/basic-arabic-diacritic-remover-web-app">v1.4.1, (2021-01-20)</a></p>
-  </footer>
+	<h1>Basic Arabic Diacritic Remover: <span lang="ar"> الحاذف البسيط للتشكيل </span></h1>
+	<div role="form">
+		<label for="arabicInputTextArea"><h2>Input: <span lang="ar">المعطيات</span></h2></label>
+		<p>Paste or type diacritic text in the following text input area: ضع النص بالتشكيل في الصندوق التالي
+		<br>
+			<button onclick="placeExampleTextEventHandler();">Put Example ضِعْ	 مَثَلًا</button>
+		</p>
+		<textarea id="arabicInputTextArea" rows="4" cols="100" lang="ar" aria-live="assertive"></textarea>
+	
+		<h3>Options اختيارات</h3>
+		<input type="checkbox" id="keepFathatanCheckbox">
+		<label for="keepFathatanCheckbox"> Do not delete fatḥatān (suffix -an)	 diacritic. لا تحذف الفتحتين</label><br>
+	
+		<h2>Actions أوامر</h2>
+		<button onclick="removeDiacriticsEventHandler();">Remove Diacritics احذف	 التشكيل</button>
+	
+	
+		<label for="arabicOutputTextArea"><h2>Results النتيجة</h2></label>
+		<textarea id="arabicOutputTextArea" rows="4" cols="100" lang="ar" aria-live="assertive"></textarea>
+	</div>
+	<footer><a href="https://github.com/elsanussi-s-mneina/">Elsanussi Mneina made this page. صنع هذه الصفحة السنوسي امنينة </a>
+		<p><a href="https://github.com/elsanussi-s-mneina/basic-arabic-diacritic-remover-web-app">v1.5.0, (2021-03-10)</a></p>
+	</footer>
 </body>
 </html>
